# IntroToPython

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  NOTICE.md  README.md  SE_MANIFEST.toml  UPSTREAM.md  pyproject.toml
examples/ch01/: RollDieDynamic.py
examples/ch02/: fig02_01.py  fig02_02.py
examples/ch02/snippets_py/: 02_05selfcheck.py  02_09selfcheck.py  ex02_01.py
examples/ch03/: fig03_01.py
examples/ch03/snippets_py/: 03_05.py  03_05selfcheck.py  03_06.py  03_07.py  03_07selfcheck.py  03_08.py  03_12selfcheck.py  03_13selfcheck.py  03_14.py  03_15y.py  03_17.py  ex03_22.py
examples/ch04/: fig04_03.py
examples/ch04/snippets_py/: 04_02.py  04_04.py  04_08.py  04_12selfcheck.py  04_13.py  04_14.py  04_15.py  04_17.py  04_18.py
examples/ch05/: RollDie.py
examples/ch05/snippets_ipynb/: RollDie.py
examples/ch05/snippets_py/: 05_02.py  05_02selfcheck.py  05_04.py  05_04selfcheck.py  05_09.py  05_09selfcheck.py  05_10.py  05_11.py  05_12.py  05_13.py  05_14.py  05_14selfcheck.py  05_15.py  05_15selfcheck.py  05_16selfcheck.py  05_17.py  05_17selfcheck.py  ex05_01.py
examples/ch06/: RollDieDynamic.py  fig06_01.py
examples/ch06/snippets_py/: 06.02.01.py  06.02.01selfcheck.py  06.02.04.py  06.02.05.py  06.02.07.py  06.02.07selfcheck.py  06.03.00.selfcheck.py  06.03.02.py  ex06.03.py  ex06.04.py
examples/ch07/snippets_py/: 07_03.py  07_05.py  07_06.py  07_07.py  07_08.py  07_10.py  07_14.01.py  07_14.02.py  07_14.02selfcheck.py
examples/ch08/snippets_py/: 08_02.02.py  08_06.py  08_07.py  08_07selfcheck.py  08_09.py  08_09selfcheck.py  08_12.02.py  08_13.py  08_13selfcheck.py
examples/ch09/snippets_py/: 09_03.01.py  09_03.01selfcheck.py  09_03.02.py  09_03.02selfcheck.py  09_04.py  09_04selfcheck.py  09_05.py  09_05selfcheck.py  09_08.02selfcheck.py  09_09.py  09_09selfcheck.py  09_11.py  09_12.01.py  09_12.01selfcheck.py  09_12.02.py  09_12.03-05.py
examples/ch10/: account.py  card.py  complexnumber.py  salariedcommissionemployee.py  salariedemployee.py  timewithproperties.py
examples/ch10/snippets_ipynb/: commissionemployee.py  deck.py
examples/ch10/snippets_py/: 10_02.01.py  10_04.01.py  10_04.02selfcheck.py  10_06.01.py  10_06.04selfcheck.py  10_08.py  10_09.py  10_10.02selfcheck.py  10_15.py  (+9 more)
examples/ch11/: binarysearch.py  ch11soundutilities.py  ch11utilities.py  insertionsort.py  mergesort.py  selectionsort.py  selectionsortanimation.py
examples/ch13_TwitterV1.1/: _READ_ME_FIRST  locationlistener.py  sentimentlistener.py
examples/ch13_TwitterV2/: keys.py  locationlistener.py  sentimentlistener.py
examples/ch14/: SimpleLanguageTranslator.ipynb  SimpleLanguageTranslator.py  keys.py
examples/ch17/: README.txt
(+48 files in other folders)
